syntax = "proto3";
package registerPhoneRelay;

option go_package = "../../binary";

message RegisterPhoneRelayResponse {
    Message1 field1 = 1;
    Message2 field2 = 2;
    bytes pairingKey = 3;
    int64 field4 = 4;
    Message3 field5 = 5;
    bytes field6 = 6;
}

message Message1 {
    int64 pubKey = 2;
}

message Message2 {
    int64 field1 = 1;
    bytes field2 = 2;
    string field3 = 3;
}

message Message3 {
    bytes rpcKey = 1;
    int64 field2 = 2;
}

message RefreshPhoneRelayResponse {
    Message1 field1 = 1;
    bytes pairKey = 2;
    int64 validFor = 3;
}

message WebEncryptionKeyResponse {
    Message1 curve = 1;
    bytes key = 2;
}
